--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
+      <div class="color selected"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
-      <div class="color"></div>
+    </div>
+    <div id="pixel-board">
     </div>
     <script src="script.js"></script>
   </body>
