--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arte com Pixels</title>
+
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
   <h1 id="title">Paleta de Cores</h1>
+
+  <div id="color-palette">
+    <div class="color" id="magenta"></div>
+    <div class="color" id="violet"></div>
+    <div class="color" id="darkorchid"></div>
+    <div class="color" id="blueviolet"></div>
+
+  </div>
+
+
+
 
 </body>
 
