--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
       <h1 id = 'title'>Paleta de Cores</h1>
+      <section id = 'color-palette'>
+          <div class = 'color red'></div>
+          <div class = 'color blue'></div>
+          <div class = 'color green'></div>
+          <div class = 'color black'></div>
+      </section>
   </body>
 </html>
