--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 	<title>Pixels Art</title>
 </head>
 <body>
 	<h1 id="title">Paleta de Cores</h1>
+	<section id="color-palette">
+		<div class="color black"></div>
+		<div class="color red"></div>
+		<div class="color blue"></div>
+		<div class="color orange"></div>
+	</section>
+
+	<script src="script.js"></script>
 </body>
 </html>
