--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
   <main>
 <h1 id="title">Paleta de Cores</h1>
+<div id="color-palette">
+  <div class="cblack color"></div>
+  <div class="cblue color"></div>
+  <div class="cred color"></div>
+  <div class="cgreen color"></div>
+</div>
   </main>
   <script src="script.js"></script>
 </body>
