--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <h1 id="title">Paleta de Cores</h1>
 
   <div id="color-palette">
+    <div class="color" id="black"></div>
     <div class="color" id="magenta"></div>
     <div class="color" id="violet"></div>
     <div class="color" id="darkorchid"></div>
-    <div class="color" id="blueviolet"></div>
-
   </div>
 
 
