--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     </header>
     <main>
         <h1 id="title">Paleta de Cores</h1>
+        <div id="color-palette">
+            <div class="color red"></div>
+            <div class="color blue"></div>
+            <div class="color green"></div>
+            <div class="color yellow"></div>
+        </div>
     </main>
     <footer>
         Desenvolvido por Juliane Cardoso
