--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <header class="header">
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <section class="colors" id="color-palette">
+        <div class="color black selected"></div>
+        <div class="color yellow"></div>
+        <div class="color orange"></div>
+        <div class="color red"></div>
+    </section>
     <script src="script.js"></script>    
 </body>
 </html>
