--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <h1 id="title">Paleta de Cores</h1>
         <div id="color-palette">
+            <div class="color black"></div>
             <div class="color red"></div>
-            <div class="color blue"></div>
             <div class="color green"></div>
             <div class="color yellow"></div>
         </div>
