--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette">
+        <div class="color" id="red"></div>
+        <div class="color" id="black"></div>
+        <div class="color" id="grenn"></div>
+        <div class="color" id="yellow"></div>
+    </div>
 </body>
 </html>
