--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Pixels Art</title>
+  </head>
+  <body>
+    <h1 id="title">Paleta de Cores</h1>
+    <script src="script.js"></script>
+  </body>
+</html>
