--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
 		<div class="color blue"></div>
 		<div class="color orange"></div>
 	</section>
+	<section id="pixel-board">
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+		<div class="pixel"></div>
+	</section>
 
 	<script src="script.js"></script>
 </body>
