verificando os 3 primeiros requisitos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+
+  <main>
+    <h2><p>Cores</p></h2>
+    <section id="color-palette">
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+    </section>
+  </main>
+
 </body>
 <script src="script.js"></script>
 </html>
