--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title>Paleta de Cores</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body></body>
+  <body>
+      <h1 id="title">Paleta de Cores</h1>
+  </body>
    <script src = "script.js"></script>
-
 </html>
