--- a/index.html
+++ b/index.html
@@ -61,15 +61,9 @@
       <div class="pixel"></div>
       <div class="pixel"></div>
     </div>
-
-
-
-
   </div>
 
-
-
-
+  <script src="script.js"></script>
 
 </body>
 
