--- a/index.html
+++ b/index.html
@@ -17,6 +17,39 @@
         <div class="color orange"></div>
         <div class="color red"></div>
     </section>
+    <div id="div">
+        <button id="clear-board" class="button">Limpar</button>
+        <input type="number" id="board-size" min="1" max="50">
+         <button id="generate-board" class="button">VQV</button>
+         </div>
+        <br>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+        </div>
     <script src="script.js"></script>    
 </body>
 </html>
