--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
-  <main>
-
-  </main>
+  <div class="container">
+    <header>
+      <h1 id="title" class="text-center">Paleta de Cores</h1>
+    </header>
+    <main>
+      <div id="color-palette">
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+      </div>
+    </main>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
