--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
       <h1 id = 'title'>Paleta de Cores</h1>
-      <section id = 'color-palette'>
+      <div id = 'color-palette'>
         <div class = 'color black'></div>
         <div class = 'color red'></div>
         <div class = 'color blue'></div>
         <div class = 'color green'></div>
-      </section>
+      </div>
+      <div id="pixel-board"></div>
+      <script src="script.js"></script>
   </body>
 </html>
