--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>
-    <h1 id="title">Paleta de Cores</h1>
-  </title>
+  <title>Paleta de Cores</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
   
+  <div id="color-palette">
+    <div class="color corRed"></div>
+    <div class="color corBlue"></div>
+    <div class="color corGreen"></div>
+    <div class="color corYellow"></div>
+  </div>
+
+
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
