--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pixels art</title>
   </head>
   <body>
-      <h1 id = 'title'>Paleta de Cores</h1>
+      <h1 npm id = 'title'>Paleta de Cores</h1>
       <div id = 'color-palette'>
         <div class = 'color black'></div>
         <div class = 'color red'></div>
