--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
+    <section id="color-palette">
+      <button class="color"></button>
+      <button class="color"></button>
+      <button class="color"></button>
+      <button class="color"></button>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
