--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
   <title>Project Pixels Art</title>
 </head>
 <body>
@@ -12,16 +13,20 @@
       <h1 id="title">Paleta de Cores</h1>
     </header>
     <section id="color-palette">
-      <div class="color black">
+      <div class="color first">
 
       </div>
-      <div class="color red">
+      <div class="color second">
 
       </div>
-      <div class="color blue">
+      <div class="color third">
 
+      </div>
+      <div class="color fourth">
+        
       </div>
     </section>
   </main>
+  <script src="./script.js"></script>
 </body>
 </html>
