--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <html>
   <head>
-    <h1 id="title"> <title> Paleta de Cores </title> </h1>
+  <title> Paleta de Cores </title> 
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
   </head>
   <body>
+    <h1 id="title"> Paleta de Cores </h1>
+    <main id="color-palette">
+      <div class="color" id="color1">
+      </div>
+      <div class="color" id="color2">
+      </div>
+      <div class="color" id="color3">
+      </div>
+      <div class="color" id="color4">
+      </div>
+    </main>
   </body>
 </html>
