--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>lucas-seixas-project-pixels-art</title>
 </head>
 <body>
+    <header>
+        <h1 id="title">
+            Paleta de Cores
+        </h1>
+    </header>
     
 </body>
 </html>
