--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1 npm id = 'title'>Paleta de Cores</h1>
       <div id = 'color-palette'>
-        <div class = 'color black'></div>
+        <div class = 'color black selected'></div>
         <div class = 'color red'></div>
         <div class = 'color blue'></div>
         <div class = 'color green'></div>
