--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <header>
       <h1 id="title">Paleta de Cores</h1>
     </header>
+    <section id="pallete-section">
+      <ul id="color-palette">
+        <li id="black" class="color"></li>
+        <li id="blue" class="color"></li>
+        <li id="green" class="color"></li>
+        <li id="red" class="color"></li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
