centralizando o texte e adicionando as caixas

--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 </header>
 
 <body>
-  <section>
-    <ul id="color-palette">
-      <li class="color"></li>
-      <li class="color"></li>
-      <li class="color"></li>
-      <li class="color"></li>
-    </ul>
-  </section>
-  <script src="script.js"></script>
+  <main>
+    <section id="color-palette">
+      <ul>
+        <li class="color"></li>
+        <li class="color"></li>
+        <li class="color"></li>
+        <li class="color"></li>
+      </ul>
+      <ul>
+    </section>
+  </main>
+  <script src=" script.js">
+  </script>
   <main>
 
     </li>
