--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
   <body>
     <h1 id="title">Paleta de Cores</h1>
-
+    <div id="color-palette">
+      <div class="color black"></div>
+      <div class="color red"></div>
+      <div class="color green"></div>
+      <div class="color blue"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 
