--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <div class="color green"></div>
             <div class="color yellow"></div>
         </div>
+        <div id="pixel-board">
+            <div class="pixel-line"></div>
+            <div class="pixel-line"></div>
+            <div class="pixel-line"></div>
+            <div class="pixel-line"></div>
+            <div class="pixel-line"></div>
+        </div>
     </main>
     <footer>
         Desenvolvido por Juliane Cardoso
