--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h1 id="title">Paleta de Cores</h1>
         <div id="color-palette">
-            <div class="color black"></div>
+            <div class="color black selected"></div>
             <div class="color red"></div>
             <div class="color green"></div>
             <div class="color yellow"></div>
