--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Project Pixels Art</title>
 </head>
 <body>
+  <main>
+    
+    <div>
+      <h1 id="title">Paleta de Cores</h1>
+    </div>
 
-  <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette">
   
+      <div class="color" style="background-color: red;"></div>
+      <div class="color" style="background-color: green;"></div>
+      <div class="color" style="background-color: blue;"></div>
+      <div class="color" style="background-color: yellow;"></div>
+  
+    </div>
+    
+  </main>
+  <script src="./script.js"></script>
 </body>
 </html>
