--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+  <div id="color-palette">
+      <div id="pink" class="color"></div>
+      <div id="red" class="color"></div>
+      <div id="blue" class="color"></div>
+      <div id="purple" class="color"></div>
+  </div>
  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
