--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>Projeto Pixel Art</title>
+    <title>Paleta de Cores</title>
   </head>
   <body>
     <header>
@@ -15,12 +15,49 @@
     <main class="container">
 
       <section id="color-palette">
-        <div class="color">Verde</div>
-        <div class="color">Amarelo</div>
-        <div class="color">Preto</div>
-        <div class="color">Cinza</div>
-        <div class="color">Laranja</div>
+        <div class="color black"></div>
+        <div class="color green"></div>
+        <div class="color yellow"></div>
+        <div class="color orange"></div>
       </section>
+
+      <div id="pixel-board">
+        <div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+        </div>
+        <div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+        </div>
+        <div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+        </div>
+        <div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+        </div>
+        <div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+        </div>
+    </div>
     </main>
 
     <script src="script.js"></script>
