--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 id="title">Paleta de Cores</h1>
   <section>
     <div id="color-palette">
-      <div class="color"></div>
+      <div class="color fixed-color"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
