correcting container class and deleting .pixel elements

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <header>
-        <div class="cotainer">
+        <div class="container">
             <h1 id="title">Paleta de Cores</h1>
         </div>
     </header>
 
     <main>
-        <div class="cotainer">
+        <div class="container">
             <article class="config-article">
                 <section id="color-palette">
-                    <div class="color"></div>
+                    <div class="color selected"></div>
                     <div class="color"></div>
                     <div class="color"></div>
                     <div class="color"></div>
@@ -26,11 +26,6 @@
             </article>
             <article class="canvas-article">
                 <section id="pixel-board">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
                 </section>
             </article>
         </div>
