--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-      <div id="pink" class="color"></div>
+      <div id="black" class="color"></div>
       <div id="red" class="color"></div>
       <div id="blue" class="color"></div>
       <div id="purple" class="color"></div>
