--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Paleta de Cores</title>
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div id="color-pallete">
+        <div class="color" id="black"></div>
+        <div class="color" id="red"></div>
+        <div class="color" id="blue"></div>
+        <div class="color" id="green"></div>
+    </div>
 </body>
 </html>
