--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette" >
+        <div id="black" class="color"></div>
+        <div id="red" class="color"></div>
+        <div id="blue" class="color"></div>
+        <div id="green" class="color"></div>
+    </div>
     <script src = "script.js" ></script>
 </body>
 </html>
