Entrega segundo requisito

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 id ="title">Paleta de Cores</h1>
+<div id="color-palette">
+<button id="purple" class="color"></button>
+<button id="yellow" class="color"></button>
+<button id="grey" class="color"></button>
+<button id="blue" class="color"></button>
+</div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
