adciona paleta de cores

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Paleta de Cores</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
       <h1 id="title">Paleta de Cores</h1>
+      <div id="color-palette"></div>
   </body>
    <script src = "script.js"></script>
 </html>
