--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Pixels Art</title>
+    <title>Paleta de Cores</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
-</body>
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+    </header>
 
+    <ul id="color-palette">
+        <li class="color"></li>
+        <li class="color"></li>
+        <li class="color"></li>
+        <li class="color"></li>
+    </ul>
+
+</body>
 <script src="script.js"></script>
 </html>
