--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pixels Art</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+  <section id="color-palette">
+    <div class="color black"></div>
+    <div class="color red"></div>
+    <div class="color blue"></div>
+    <div class="color green"></div>
+  </section>
+  <link href="script.js">
 </body>
 </html>
