--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
 
+  <div id="color-palette">
+    
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
