--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Projeto Pixels Art</title>
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
   
+  <main>
+    <section>
+      <div id="color-palette">
+
+      </div>
+    </section>
+  </main>
+  <script src="script.js"></script>
 </body>
 </html>
