--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 
       </div>
       <div class="color fourth">
-        
+
       </div>
+    </section>
+
+    <section id="pixel-board">
+      
     </section>
   </main>
   <script src="./script.js"></script>
