Color Pallet Done with background correction and challenge 2 done

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <main>
 
     <section id="color-palette">
-      <div class="color"></div>
-      <div class="color"></div>
-      <div class="color"></div>
-      <div class="color"></div>
+      <div class="color first-color"></div>
+      <div class="color random1"></div>
+      <div class="color random2"></div>
+      <div class="color random3"></div>
     </section>
 
 
