Entrega terceiro requisito

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id ="title">Paleta de Cores</h1>
 <div id="color-palette">
-<button id="purple" class="color"></button>
+<button id="black" class="color"></button>
 <button id="yellow" class="color"></button>
 <button id="grey" class="color"></button>
 <button id="blue" class="color"></button>
