--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="color"></div>
       <div class="color"></div>
     </div>
+    <div id="pixel-board"></div>
   </section>
 <script src="script.js"></script>
 </body>
