--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <main class="container">
 
       <section id="color-palette">
-        <div class="color black"></div>
+        <div class="color black selected"></div>
         <div class="color green"></div>
         <div class="color yellow"></div>
         <div class="color orange"></div>
       </section>
 
       <div id="pixel-board">
-        <div>
+        <div class="pixel-board-container">
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
