--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 id="title">Paleta de Cores</h1>
   
   <div id="color-palette">
-    <div class="color corBlack"></div>
+    <div class="color corBlack selected"></div>
     <div class="color corBlue"></div>
     <div class="color corGreen"></div>
     <div class="color corYellow"></div>
