--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Projeto Pixels Art</title>
+  <meta charset="UTF-8">
+  <title>Projeto Pixels Art</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
+  <!-- Requisito 1 -->
+  <h1 id="title">Paleta de Cores</h1>
+  
+  <section id="color-palette">
+    <div class="color black"></div>
+    <div class="color red"></div>
+    <div class="color blue"></div>
+    <div class="color green"></div>
+  </section>
+    
+  <script src="script.js"></script>
 </body>
 </html>
