--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Pixels Art World</title>
 </head>
 <body>
-  <section>
-   <h1 id="title">Paleta de Cores</h1>
-  </section>
+  <main>
+    <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette">
+      <button class="color black selected"></button>
+      <button class="color red"></button>
+      <button class="color green"></button>
+      <button class="color blue"></button>
+    </div>
+  </main>
+  <script src="script.js"></script>
 </body>
 </html>
