--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="UFT-8">
         <title>Paleta de Cores</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 id="title">Paleta de Cores</h1>
+        <section id="color-palette">
+            <div class="color color1"></div>
+            <div class="color color2"></div>
+            <div class="color color3"></div>
+            <div class="color color4"></div>
+        </div>
     </body>
 </html>
