criando as linhas

--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 </head>
 <body>
   <h1>Paleta de cores</h1>
-  <div class="paleta">
-    <div class="bloco-preto"></div>
-    <div class="bloco-vermelho"></div>
-    <div class="bloco-azul"></div>
-    <div class="bloco-verde"></div>
-  </div>
+  <div class="paleta"></div>
   <div class="quadro"></div>
   <script src="script.js"></script>
 </body>
