--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="color green"></div>
             <div class="color yellow"></div>
         </div>
+        <button id="clear-board" class="btn">Limpar</button>
         <div id="pixel-board">
             <div class="pixel-line"></div>
             <div class="pixel-line"></div>
