--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,47 @@
   <link rel="stylesheet" href="style.css">
   <title>Paleta de Cores</title>
 </head>
-<body>
-  <h1 id="title">Paleta de Cores</h1>
 
-  <div id="color-palette">
-    <div class="color colorBlue"></div>
-    <div class="color colorYellow"></div>
-    <div class="color colorRed"></div>
-    <div class="color colorGreen"></div>
-  </div>
+<body>
+  <main>
+    <h1 id="title">Paleta de Cores</h1>
+
+    <div id="color-palette">
+      <div class="color colorBlue"></div>
+      <div class="color colorYellow"></div>
+      <div class="color colorRed"></div>
+      <div class="color colorGreen"></div>
+    </div>
+
+    <div id="pixel-board">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+  </main>
+
 </body>
+
 </html>
