Requisitos 4 e 5 Lint OK

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       <button class="color"></button>
       <button class="color"></button>
     </section>
+    <div id="pixel-board">
+      <section class="line"></section>
+      <section class="line"></section>
+      <section class="line"></section>
+      <section class="line"></section>
+      <section class="line"></section>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
