--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
         <div class="color blue"></div>
         <div class="color green"></div>
       </div>
+      <div id="pixel-board"> 
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div><br>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div><br>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div><br>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div><br>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div>
+        <div class="pixel"> </div><br>
+      </div>
     </main>
   </body>
 </html>
