--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
   <div class="cgreen color"></div>
 </div>
 <div id="pixel-board">
-  <div class="linePixels">
+  <div id="linePixels">
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
   </div>
-  <div class="linePixels">
+  <div id="linePixels">
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
   </div>
-  <div class="linePixels">
+  <div id="linePixels">
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
   </div>
-  <div class="linePixels">
+  <div id="linePixels">
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
   </div>
-  <div class="linePixels">
+  <div id="linePixels">
     <div class="pixel"></div>
     <div class="pixel"></div>
     <div class="pixel"></div>
