começando a resolver os requisitos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pixels Art</title>
 </head>
 <body>
-  <h1>Paleta de cores</h1>
+  <h1 id="title">Paleta de cores</h1>
   <div class="paleta"></div>
   <div class="quadro"></div>
   <script src="script.js"></script>
