--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Projeto Art Pixels</title>
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
     
+    <div id="color-palette"></div>
+        <div class="color" id="black"></div>
+        <div class="color" id="red"></div>
+        <div class="color" id="green"></div>
+        <div class="color" id="blue"></div>
+
+
+        
+    <script src="script.js"></script>
 </body>
 </html>
