--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="color"></div>
       <div class="color"></div>
     </div>
+  </section>
+  <section><button id="clear-board">Limpar</button></section>
+  <section>
     <div id="pixel-board"></div>
   </section>
 <script src="script.js"></script>
