Conclui requisito 4 e 5 e corrige o 2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </header>
 
   <div id="color-palette">
-    
+  </div>
+
+  <div id="pixel-board">
   </div>
   <script src="script.js"></script>
 </body>
