--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Pixels Art</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
-  
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+    <!-- paleta  -->
+    <div id="color-palette">
+      <div class='color' id="color-1"></div>
+      <div class='color' id="color-2"></div>
+      <div class='color' id="color-3"></div>
+      <div class='color' id="color-4"></div>
 </body>
 </html>
