--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 </head>
 <body>
   <header>
-    <h1>Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
   </header>
+  <div id = color-palette>
+    <div class="color selected" id='black'>
+
+    </div>
+    <div class="color" id='red'>
+
+    </div>
+    <div class="color" id='blue'>
+
+    </div>
+    <div class="color" id='green'>
+    </div>
+  </div>
+  <div>
+
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
