--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-      <div id="black" class="color"></div>
+      <div id="black" class="color selected"></div>
       <div id="red" class="color"></div>
       <div id="blue" class="color"></div>
       <div id="purple" class="color"></div>
@@ -51,7 +51,7 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
-      </div>
+    </div>
   </div>
  <script type="text/javascript" src="script.js"></script>
 </body>
