requisito 3 em css

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
   <main>
-    <section id="color-palette">
-      <ul>
-        <li class="color"></li>
-        <li class="color"></li>
-        <li class="color"></li>
-        <li class="color"></li>
+    <section>
+      <ul id="color-palette">
+        <li class="color" id="bk"></li>
+        <li class="color" id="g"></li>
+        <li class="color" id="b"></li>
+        <li class="color" id="r"></li>
       </ul>
       <ul>
     </section>
