--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <br>
+    <br>
     <h1 id='title'>Paleta de Cores</h1>
     
+    <div id='color-palette'>
+
+        <div id = 'black' class='color'></div>
+        <div id = 'blue' class='color'></div>
+        <div id = 'red' class='color'></div>
+        <div id = 'yellow' class='color'></div>
+
+    </div>
 </body>
 </html>
