--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="cred color"></div>
   <div class="cgreen color"></div>
 </div>
+<button id="clear-board">Limpar</button>
 <div id="pixel-board">
   <div id="linePixels">
     <div class="pixel"></div>
