--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class = 'color blue'></div>
         <div class = 'color green'></div>
       </div>
+      <button id="clear-board">Limpar</button>
       <div id="pixel-board"></div>
       <script src="script.js"></script>
   </body>
