--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Pixels Art</title>
 </head>
 <body>
-  <h1 id="title">Paleta de cores</h1>
-  <div class="paleta"></div>
+  <h1 id="title">Paleta de Cores</h1>
+  <div  id="color-palette"></div>
   <div class="quadro"></div>
   <script src="script.js"></script>
 </body>
