--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <section>
         <div id="color-palette">
             <div class="color firstColor"></div>
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
+            <div class="color randomColors"></div>
+            <div class="color randomColors"></div>
+            <div class="color randomColors"></div>
         </div>
     </section>
 
     <main>
-        <div>
+        <div id="pixel-board">
 
         </div>
     </main>
