--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
+  <h1 id="title">Paleta de Cores</h1>
+  <div id="color-palette">
+  </div>
   
+  <script src="script.js"></script>
 </body>
 </html>
