--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <section id="color-pallet"></section>
+    <div class="color" id="preto"></div>
+    <div class="color" id="cinza"></div>
+    <div class="color" id="vermelho"></div>
+    <div class="color" id="roxo"></div>
     <script src="script.js"></script>
 </body>
 </html>
