--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <header>
         <h1 id="title";>Paleta de Cores</h1>
     </header>
-    <div id="color-palette";></div>
+    <main>
+      <div id="color-palette";>
+      </div>
+      <div id="pixel-board">
+      </div>
+    </main>
 </body>
