--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
             Paleta de Cores
         </h1>
     </header>
+    <nav>
+        <div id="color-palette">
+            <div class="color box-black"></div>
+            <div class="color box-green"></div>
+            <div class="color box-yellow"></div>
+            <div class="color box-red"></div>
+        </div>
+    </nav>
+    <main>
+        <div>
+            <div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
