--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Paleta de Cores</title>
-  <h1 id="title">Paleta de Cores</h1>
 </head>
 <body>
+  <h1 id="title">Paleta de Cores</h1>
+  <main>
+    <div id="color-palette">
+      <div id="paletablack" class="color"></div>
+      <div id="paletared" class="color"></div>
+      <div id="paletagreen" class="color"></div>
+      <div id="paletablue" class="color"></div>
+    </div>
+
+  </main>
   
 <script src="script.js"></script>
 </body>
