--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div id="color-palette">
     <ul></ul>
-      <li class="name-colors">Manhattan</li>
+      <li class="name-colors">Black</li>
       <li class="name-colors">Siena Raw</li>
       <li class="name-colors">Lambreta</li>
       <li class="name-colors">Tibre</li>
