--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="color" id="darkorchid"></div>
   </div>
 
+  <button id="clear-board">Limpar</button>
+
   <div id="pixel-board">
     <div id="firstLine">
       <div class="pixel"></div>
@@ -62,6 +64,7 @@
       <div class="pixel"></div>
     </div>
   </div>
+
 
   <script src="script.js"></script>
 
