--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </div>
   </section>
 
+  <section>
+    <div id="pixel-board">
+    </div>
+  </section>
   <script src="./script.js"></script>
 </body>
 </html>
