--- a/index.html
+++ b/index.html
@@ -19,5 +19,33 @@
         <div id = 'yellow' class='color'></div>
 
     </div>
+
+    <div id="pixel-board">
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+    </div>
 </body>
 </html>
