--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,14 @@
   <title>Project Pixels Art</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
   <h1 id="title">Paleta de Cores</h1>
+
+  <div id="color-palette"></div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
