requisito quatro concluido

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
       </div>
     </section>
+    
+    <section>
+      <div id="pixel-board">
+
+      </div>
+    </section>
   </main>
   <script src="script.js"></script>
 </body>
