--- a/index.html
+++ b/index.html
@@ -22,21 +22,29 @@
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
+    </section>
+    <section>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
+    </section>
+    <section>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
+    </section> 
+    <section>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
+    </section>
+    <section>
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
