--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
         <div id="blue" class="color"></div>
         <div id="green" class="color"></div>
     </div>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>    
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>   
+    </div>
     <script src = "script.js" ></script>
 </body>
 </html>
