Entrega sexto desafio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id ="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-<button id="black" class="color"></button>
+<button id="black" class="color selected"></button>
 <button id="yellow" class="color"></button>
 <button id="grey" class="color"></button>
 <button id="blue" class="color"></button>
