adding reset button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <div class="color"></div>
                     <div class="color"></div>
                 </section>
+                <section id="clear-board">
+                    <button>Limpar</button>
+                </section>
             </article>
             <article class="canvas-article">
                 <section id="pixel-board">
