--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div id='color-palette'>
 
-        <div id = 'black' class='color'></div>
+        <div id = 'black' class='color selected'></div>
         <div id = 'blue' class='color'></div>
         <div id = 'red' class='color'></div>
         <div id = 'yellow' class='color'></div>
