2nd and 3rd requirement done

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
   <link type="text/css" rel="stylesheet" href="./style.css" >
 </head>
 <body>
+  <main>
   <h1 id="title"> Paleta de Cores</h1>
-
-  <div id="color-pallete">
+  <nav class="color-pallete">
+  <div id="color-palette">
     <div id="cor1" class="color">  </div>
     <div id="cor2" class="color">  </div>
     <div id="cor3" class="color">  </div>
     <div id="cor4" class="color">  </div>
   </div>
+  </nav>
+
+    <section class="game-board">
 
 
-
-
-
+    </section>
+</main>
 </body>
 </html>
