applyng class btn in reset button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="color"></div>
                 </section>
                 <section id="clear-board">
-                    <button>Limpar</button>
+                    <button class="btn">Limpar</button>
                 </section>
             </article>
             <article class="canvas-article">
