Change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Project Pixels Art</title>
 </head>
+
 <body>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    
+        <div id="color-palette">
+            <div class="color selected"></div>
+            <div class="color paleta-2-Bg"></div>
+            <div class="color paleta-3-Bg"></div>
+            <div class="color paleta-4-Bg"></div>
+        </div>
+        <button type="submit" id="clear-board">Limpar</button>
+        <div id="pixel-board">
+            <div class="line-pixel">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="line-pixel">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="line-pixel">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="line-pixel">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+            <div class="line-pixel">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+        </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
