--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li id="red" class="color"></li>
       </ul>
     </section>
+    <div id="pixel-container">
+      <section id="pixel-board"></section>
+    </div>
   </main>
 </body>
 </html>
