--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div class="color"></div>
     </div>
 
+    <button id="clear-board">Limpar</button>
+
     <div id="pixel-board">
       <div class="board-line">
         <div class="pixel"></div>
