--- a/index.html
+++ b/index.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Paleta de Cores</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>Paleta de Cores</title>
+  <meta charset="UTF-8">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
-    <div id="color-pallete">
-        <div class="color" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="blue"></div>
-        <div class="color" id="green"></div>
-    </div>
+  <h1 id="title">Paleta de Cores</h1>
+  <div id="color-palette">
+    <div class="color" id="black"></div>
+    <div class="color" id="red"></div>
+    <div class="color" id="blue"></div>
+    <div class="color" id="green"></div>
+  </div>
+  <section id="pixel-board">
+      <!-- linha A -->
+      <div class="pixel" id="a1"></div>
+      <div class="pixel" id="a2"></div>
+      <div class="pixel" id="a3"></div>
+      <div class="pixel" id="a4"></div>
+      <div class="pixel" id="a5"></div>
+      <!-- linha B -->
+      <div class="pixel" id="b1"></div>
+      <div class="pixel" id="b2"></div>
+      <div class="pixel" id="b3"></div>
+      <div class="pixel" id="b4"></div>
+      <div class="pixel" id="b5"></div>
+      <!-- linha C -->
+      <div class="pixel" id="c1"></div>
+      <div class="pixel" id="c2"></div>
+      <div class="pixel" id="c3"></div>
+      <div class="pixel" id="c4"></div>
+      <div class="pixel" id="c5"></div>
+      <!-- linha D -->
+      <div class="pixel" id="d1"></div>
+      <div class="pixel" id="d2"></div>
+      <div class="pixel" id="d3"></div>
+      <div class="pixel" id="d4"></div>
+      <div class="pixel" id="d5"></div>
+      <!-- linha E -->
+      <div class="pixel" id="e1"></div>
+      <div class="pixel" id="e2"></div>
+      <div class="pixel" id="e3"></div>
+      <div class="pixel" id="e4"></div>
+      <div class="pixel" id="e5"></div>
+    </section>
 </body>
 </html>
