--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">    
-    <title>Paleta de Cores</title>    
+    <title>Paleta de Cores</title>  
+    <link rel="stylesheet" href="style.css">  
 </head>
 
 <body>
     <header></header>
+    <section></section>
 
 
 
