--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
-    <section id="color-pallet"></section>
+    <section id="color-palette">
     <div class="color" id="preto"></div>
     <div class="color" id="cinza"></div>
     <div class="color" id="vermelho"></div>
     <div class="color" id="roxo"></div>
+    </section>
     <script src="script.js"></script>
-</body>
+    </body>
 </html>
