--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
   </div>
+  <div id="pixel-board">
+  </div>
   
   <script src="script.js"></script>
 </body>
