--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 	<h1 id="title">Paleta de Cores</h1>
 	<section id="color-palette">
-		<div class="color black selected"></div>
-		<div class="color red"></div>
-		<div class="color blue"></div>
-		<div class="color orange"></div>
+		<div class="black color selected"></div>
+		<div class="red color"></div>
+		<div class="blue color"></div>
+		<div class="orange color"></div>
 	</section>
 	<section id="pixel-board">
 		<div class="pixel"></div>
