--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div class="color blue"></div>
     <div class="color green"></div>
   </section>
-  <link href="script.js">
+  <script src="script.js"></script>
 </body>
 </html>
