--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <div class="color">blue</div>
       <div class="color">green</div>
     </div>
+    <input type="number" id="board-size" min="0">
+    <input type="submit">
+    <button id="generate-board">VQV</button>
     <button id="clear-board">Limpar</button>
     <div id="pixel-board">
     </div>
