--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- paleta  -->
     <div id="color-palette-container">
       <div id="color-palette">
-        <div class='color' id="color-1"></div>
-        <div class='color' id="color-2"></div>
-        <div class='color' id="color-3"></div>
-        <div class='color' id="color-4"></div>
+        <div id="color-1" class='color selected'></div>
+        <div id="color-2" class='color'></div>
+        <div id="color-3" class='color'></div>
+        <div id="color-4" class='color'></div>
     </div>
     <div id="pixel-board-container">
       <div id="pixel-board">
