--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <div class="color"></div>
     </div>
   </section>
-  <section><button id="clear-board">Limpar</button></section>
+  <section>
+    <button id="clear-board">Limpar</button>
+    <label for="board-size">Tamanho do quadro:</label><input type="number" name="boardSize" id="board-size" max="50" min="1"><button id="generate-board">VQV</button>
+  </section>
   <section>
     <div id="pixel-board"></div>
   </section>
