--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <div id="color-palette">
   </div>
 
+  <button id="clear-board">Limpar</button>
+
   <div id="pixel-board">
   </div>
   <script src="script.js"></script>
