Até o tem 5 ok HTML/CSS

--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
   <body>
     <h1 id=title > Paleta de Cores</h1>
 
-    <div id=color-pallete > 
-      <div class="color blue"></div>
+    <div id=color-palette > 
+      <div class="color black"></div>
       <div class="color red"></div>
-      <div class="color yellow"></div>
       <div class="color orange"></div>
+      <div class="color blue"></div>
     </div>
 
 
-    <div id=quadrados >
-        <div ></div>
-        <div ></div> 
-        <div ></div> 
-        <div ></div> 
-        <div ></div> 
-        <div ></div>
-        <div ></div> 
-        <div ></div> 
-        <div ></div> 
-        <div ></div>
-        <div ></div>
-        <div ></div> 
-        <div ></div> 
-        <div ></div> 
-        <div ></div>
-        <div ></div>
-        <div ></div> 
-        <div ></div> 
-        <div ></div> 
-        <div ></div>
-        <div ></div>
-        <div ></div> 
-        <div ></div> 
-        <div ></div> 
-        <div ></div>
+    <div id=pixel-board >
+        <div class="pixel"></div>
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div>
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div> 
+        <div class="pixel"></div>
         
     </div>
   </body>
