--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
         <div class="color" id="blue"></div>
     </div>
 
-    <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-    </div>
+    <div id="pixel-board"></div>
 
     <script src="./script.js"></script>
 </body>
