--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
+      <div class="color colorBlack selected"></div>
       <div class="color colorBlue"></div>
-      <div class="color colorYellow"></div>
       <div class="color colorRed"></div>
       <div class="color colorGreen"></div>
     </div>
