adding a input and a button to customize board size

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <section id="clear-board">
                     <button class="btn">Limpar</button>
                 </section>
+                <section>
+                    <input type="number" name="area" id="generate-board">
+                    <button>VQV</button>
+                </section>
             </article>
             <article class="canvas-article">
                 <section id="pixel-board">
