--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <div class="color yellow"></div>
         </div>
         <button id="clear-board" class="btn">Limpar</button>
+        <div>
+            <input type="number" min="5" max="50" id="board-size" placeholder="Tamanho do quadro">
+            <button id="generate-board" class="btn">VQV</button>
+        </div>
         <div id="pixel-board">
             <div class="pixel-line"></div>
             <div class="pixel-line"></div>
