C7 requisito 9 - Botão Limpar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       </div>
 
     </div>
-    <div id="pixel-board">
+    <div class="btn-content">
+      <button id="clear-board">Limpar</button>
+    </div>
+
+    <div id="pixel-board" class="quadropixel">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
@@ -47,6 +51,7 @@
       <div class="pixel"></div>
       <div class="pixel"></div>
     </div>
+
     <script src="script.js"></script>
   </body>
 
